# hugr

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CITATION.cff  Cargo.toml  DEVELOPMENT.md  _typos.toml  devenv.nix  dist-workspace.toml  justfile  pyproject.toml  release-please-config.json  release-plz.toml  ruff.toml
.github/: change-filters.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml  question.yml
.github/actions/check-changes/: action.yml
.github/workflows/: ci-py.yml  ci-rs.yml  docs.yml  hugr-cli-v-release.yml  notify-coverage.yml  python-wheels-wasm.yml  python-wheels.yml  release-please.yml  release-plz.yml  semver-checks.yml  unsoundness.yml
hugr/: CHANGELOG.md  Cargo.toml  README.md
hugr-cli/: CHANGELOG.md  Cargo.toml
hugr-cli/src/: convert.rs  describe.rs  extensions.rs  hugr_io.rs  lib.rs  mermaid.rs
hugr-cli/tests/: convert.rs  describe.rs  gen_extensions.rs  validate.rs
hugr-core/: CHANGELOG.md  Cargo.toml
hugr-core/src/: builder.rs  core.rs  envelope.rs  export.rs  extension.rs  hugr.rs  import.rs  metadata.rs  module_graph.rs  ops.rs  proptest.rs  types.rs  utils.rs
hugr-core/tests/: model.rs
hugr-llvm/: CHANGELOG.md  Cargo.toml  README.md
hugr-llvm/src/: emit.rs  lib.rs  sum.rs  test.rs  types.rs  utils.rs
hugr-model/: CHANGELOG.md  Cargo.toml
hugr-model/capnp/: hugr-v0.capnp
hugr-model/tests/: binary.rs  text.rs
hugr-passes/: CHANGELOG.md  Cargo.toml  README.md
hugr-passes/benches/benchmarks/: examples.rs
hugr-passes/src/: composable.rs  const_fold.rs  dataflow.rs  dead_code.rs  dead_funcs.rs  force_order.rs  hash.rs  inline_dfgs.rs  lib.rs  monomorphize.rs  non_local.rs  normalize_cfgs.rs  redundant_order_edges.rs  replace_types.rs  scope.rs  untuple.rs  utils.rs
hugr-passes/src/composable/: scope.rs
hugr-passes/src/const_fold/: test.rs
hugr-passes/src/dataflow/: partial_value.rs
hugr-passes/src/non_local/: localize.rs
hugr-passes/src/replace_types/: handlers.rs  linearize.rs
hugr-persistent/: CHANGELOG.md  Cargo.toml  README.md
hugr-persistent/src/: parents_view.rs  persistent_hugr.rs  state_space.rs  subgraph.rs  tests.rs  trait_impls.rs  walker.rs
hugr-persistent/tests/: persistent_walker_example.rs
hugr-py/: CHANGELOG.md  Cargo.toml  README.md  package.md  pyproject.toml
hugr-py/docs/: build.sh
hugr-py/rust/: lib.rs  linking.rs  metadata.rs  model.rs  zstd_util.rs
hugr-py/tests/: conftest.py  test_custom.py  test_hugr_build.py  test_linking.py  test_metadata.py  test_model.py  test_ops.py  test_passes.py  test_scope.py  test_tracked_dfg.py  test_used_extensions.py
hugr/benches/: bench_main.rs
hugr/benches/benchmarks/: hash.rs  hugr.rs  mod.rs  serialization.rs  subgraph.rs  types.rs
hugr/benches/benchmarks/hugr/: examples.rs
hugr/benches/examples/: mod.rs
hugr/src/: hugr.rs  lib.rs
resources/json-schema/: hugr_schema_live.json  hugr_schema_strict_live.json  serialization.md  testing_hugr_schema_live.json  testing_hugr_schema_strict_live.json
resources/std_extensions/: prelude.json  ptr.json
scripts/: check_extension_versions.py
specification/: README.md  appendix-compute-signature.md  appendix-control-flow.md  appendix-node-types.md  architecture.md  extensions.md  glossary.md  hugr.md  index.md  metadata.md  motivation.md  rewriting.md  serialization.md  stdlib.md  type-system.md
test_files/: README.md  justfile
test_files/guppy_examples/: conditional_loop.py  fn_calls.py  repeat_until_success.hugr  repeat_until_success.py  t_factory.hugr  t_factory.py
test_files/hugr_examples/: README.md  generate_simple_hugr.py  hugr_conditional.hugr  hugr_nested.hugr  hugr_nested_w_external_edge.hugr  hugr_w_function_direct_call.hugr  hugr_w_function_indirect_call.hugr  hugr_w_recursive_function.hugr  loop_conditional.py  simple_hugr.hugr
test_files/import_tests/: case_entry_block_part_of_loop.hugr  generate_import_tests.py
(+623 files in other folders)
